# pair-programming-project-ia

./: README.md
analisador-risco-gemini/: README.md  app.py  pyproject.toml
analisador-risco-gemini/analisador_risco_gemini/: __init__.py  routes.py  utils.py
analisador-risco-gemini/analisador_risco_gemini/models/: fuzzy_model.py
analisador-risco-gemini/analisador_risco_gemini/templates/: base.html  index.html  input_types.html  resultado.html
analisador_risco_gemini/: routes.py
analisador_risco_gemini/models/: fuzzy_model.py
analisador_risco_gemini/templates/: index.html  input_types.html
