[tool.poetry]
name = "analisador-risco-gemini"
version = "0.1.0"
description = ""
authors = ["ThiagoORuby <trs@ic.ufal.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"
scikit-fuzzy = "^0.5.0"
numpy = "^2.1.3"
matplotlib = "^3.9.3"
scipy = "^1.14.1"
networkx = "^3.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
